@@ -1,3 +1,5 @@
+import org.gradle.api.tasks.testing.logging.TestExceptionFormat
+
 plugins {
 	java
 	id("org.springframework.boot") version "3.3.2"
@@ -19,10 +21,29 @@ repositories {
 
 dependencies {
 	implementation("org.springframework.boot:spring-boot-starter-web")
+	implementation("org.springframework.boot:spring-boot-starter-security")
+	implementation("org.springframework.data:spring-data-jdbc")
+	implementation("com.h2database:h2")
 	testImplementation("org.springframework.boot:spring-boot-starter-test")
-	testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+	testRuntimeOnly("org.junit.platform:junit-platform-launcher")// See https://docs.gradle.org/8.3/userguide/upgrading_version_8.html#test_framework_implementation_dependencies
 }
 
 tasks.withType<Test> {
 	useJUnitPlatform()
+	jvmArgs = listOf(
+		"-XX:+EnableDynamicAgentLoading",
+	)
+}
+
+// This section causes useful test output to go to the terminal.
+tasks.test {
+	testLogging {
+		events("passed", "skipped", "failed") //, "standardOut", "standardError"
+
+		showExceptions = true
+		exceptionFormat = TestExceptionFormat.FULL
+		showCauses = true
+		showStackTraces = true
+		showStandardStreams = true// Change to true for more verbose test output
+	}
 }
